--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ahorcado</title>
-    <link rel="stylesheet" href="../assets/styles/index.css" />
+  <link rel="stylesheet" href="../src/styles.css">
+  <link rel="icon" href="https://freepngimg.com/save/55655-gaming-download-hd-png/512x512" sizes="16x16" type="image/png">
+    
   </head>
-  <body>
-    <div id="mainContainer">
-      <div id="top">
-        <div id="dummy"></div>
-        <div id="letters"></div>
-      </div>
-      <!---->
-      <div id="bot"></div>
-        
-      </div>
-    </div>
+  <body id="body">
+    <header id="header">
+      <h1 id="ti">Go Play</h1>
+    </header>
+<main>
+  <img id="img0" src="1.png"">
+
+
+  <div>
+<p id="words">
+<span>H</span> <span></span> <span></span> <span></span> <span>O</span>
+
+</p>
+<button id="play">Start Game</button>
+<br> <br>
+<div id="buttons">
+<button>a</button>
+<button>b</button>
+<button>c</button>
+<button>d</button>
+<button>e</button>
+<button>f</button>
+<button>g</button>
+<button>h</button>
+<button>i</button>
+<button>j</button>
+<button>k</button>
+<button>l</button>
+<button>m</button>
+<button>n</button>
+<button>ñ</button>
+<button>o</button>
+<button>p</button>
+<button>q</button>
+<button>r</button>
+<button>s</button>
+<button>t</button>
+<button>u</button>
+<button>v</button>
+<button>w</button>
+<button>x</button>
+<button>y</button>
+<button>z</button>
+
+</div>
+  </div>
+</main>
     <script type="module" src="./src/index.js"></script>
   </body>
 </html>
